fix: устранить замечания code review
- SettingsDialog: перехват NumberFormatException в validateBootstrap(), порт обязателен в regex
- MessageDetailDialog: formatXml() возвращает null для blank (единообразно с formatJson()); show() → showAndWait() (модальность)
- KafkaService: cancelFetch() вызывается автоматически внутри fetchMessagesStreaming(); FETCH_TIMEOUT снижен с 30 до 10 сек; потоки admin-пула именуются kafka-admin-1/2
- MessageTablePanel: убран ручной вызов cancelFetch() (теперь внутри сервиса)
- app.css: вынесены дублирующиеся инлайн-стили в классы .status-label, .status-label-error, .hint-label, .test-result-*

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>